# gbs

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clang-toolchain.cmake  compiler_output.txt  gbs.cpp  launch.vs.json  out.txt  tasks.vs.json  todo.md  version
.github/: compiler_output.txt
.github/workflows/: cmake-multi-platform.yml
gbs/src/: cmd_build.cppm  cmd_cl.cppm  cmd_clean.cppm  cmd_config.cppm  cmd_enum_cl.cppm  cmd_get_cl.cppm  cmd_ide.cppm  cmd_run.cppm  cmd_unittest.cppm  cmd_version.cppm  compiler.cppm  context.cppm  dep_scan.cppm  enumerate_compilers.cppm  enumerate_compilers_clang.cppm  enumerate_compilers_gcc.cppm  enumerate_compilers_msvc.cppm  enumerate_compilers_msvc.win.cppm  env.cppm  gbs.cpp  get_source_groups.cppm  monad.cppm  msvc.cpp  os.cppm  source_enum.cppm  wsl.cppm
gbs/src/task/: task.cppm  task_graph.cppm  thread_pool.cppm
gbs/unittest/: test.can_use_dynamic_lib.cpp  test.can_use_include_lib.cpp  test.can_use_src.cpp  test.can_use_static_lib.cpp  test.self_compile.cpp
gbs/unittest/src/: test.self_compile.cpp
lib/d.lib2/inc/: lib2.h  lib2.hpp
lib/d.lib2/src/: lib2.cpp
lib/s.lib1/inc/: lib1.h
lib/s.lib1/src/: lib1.cpp
sample_project/src/: extra.cpp  main.cpp
sample_project/src/mod/: mod3.cppm  mod6.cppm  mod8.cppm  mod9.cppm
sample_project_all/lib/d.lib2/inc/: lib2.h
sample_project_all/lib/d.lib2/src/: lib2.cpp  lib2.cppm
sample_project_all/lib/s.lib1/src/: lib1.cpp
sample_project_all/sample_project_all/src/mod/: mod8.cppm
sample_project_all/src/: main.cpp
sample_project_all/src/mod/: mod0.cppm  mod1.cppm  mod2.cppm  mod3.cppm  mod4.cppm  mod5.cppm  mod6.cppm  mod7.cppm
sample_project_all/unittest/src/: helper.cppm  test.catch2_works.cpp  test.self_compile.cpp  test_self_compile.cpp
sample_project_dlib/lib/d.lib2/src/: lib2.cpp
sample_project_dlib/src/: main.cpp
sample_project_slib/lib/s.lib1/src/: lib1.cpp
sample_project_slib/src/: main.cpp
src/: build_clang.cpp  build_msvc.cpp  cmd_build.cppm  cmd_cl.cppm  cmd_clean.cppm  cmd_config.cppm  cmd_enum_cl.cppm  cmd_get_cl.cppm  cmd_ide.cppm  cmd_run.cppm  cmd_version.cppm  compiler.cpp  compiler.cppm  compiler.h  context.cppm  context.h  dep_scan.cppm  enum_compilers.win.cpp  enum_sources.cpp  env.cppm  gbs.cpp  get_cl.cpp  get_source_groups.cppm  home.h  monad.cppm  msvc.cpp  response.cpp  response.cppm  response.h  source_enum.cppm  win.enum_compilers.cpp
test/.gbs/msvc/: _shared  debug  modules  objects
test/lib/module_test/: module_test.cppm
test/src/: extra.cpp  main.cpp
test/src/mod/: mod.cppm  mod.ixx  mod0.cppm  mod0.pcm  mod1.cppm  mod2.cppm  mod3.cppm  mod4.cppm  mod5.cppm  mod6.cppm  mod7.cppm  mod8.cppm  mod9.cppm
